// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> renders with default style 1`] = `
<DocumentFragment>
  .c0 {
  max-width: 80%;
  margin: 0.5rem;
  padding: 0.5rem;
  background: #fff;
  border: none;
  border-radius: 0.5rem;
  box-shadow: 0px 3px 5px 1px rgba(217,217,217,0.82);
  font-family: 'Noto Sans HK',sans-serif;
  font-size: 1.3rem;
  color: #000;
  text-align: center;
  text-transform: uppercase;
  appearance: none;
}

<select
    class="c0"
  />
</DocumentFragment>
`;

exports[`<Select /> renders with theme 1`] = `
<DocumentFragment>
  .c0 {
  max-width: 80%;
  margin: 0.5rem;
  padding: 0.5rem;
  background: #202124;
  border: none;
  border-radius: 0.5rem;
  box-shadow: none;
  font-family: 'Noto Sans HK',sans-serif;
  font-size: 1.3rem;
  color: #fff;
  text-align: center;
  text-transform: uppercase;
  appearance: none;
}

<select
    class="c0"
  />
</DocumentFragment>
`;
